0.2.2-b01: fix some bugs, add hiding search
- fix start menu positioning (#30)
- fix wallpaper options doing mitosis (#42)
- fix terminal box overflowing and the typing box being too small
- desktop keyboard shortcuts no longer activate when typing
- search can now be hidden by clicking on the desktop
- add PIE codename

--- a/extensions/terminal/styles.css
+++ b/extensions/terminal/styles.css
@@ -5,8 +5,11 @@
     padding: 1em;
     border-radius: 0.5em;
     height: 100%;
+    box-sizing: border-box;
 }
 .apps-terminal-result{ margin-bottom: 1em; }
+
+.apps-terminal-input-outer{ white-space: nowrap; }
 .apps-terminal-input{
     background-color: transparent;
     border: none;
@@ -15,4 +18,5 @@
     font-family: monospace;
     padding: 0;
     outline: none;
+    width: 100%;
 }
